--- a/app/src/main/res/drawable/bare_rock_control.xml
+++ b/app/src/main/res/drawable/bare_rock_control.xml
@@ -1,49 +1,51 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="48dp"
-    android:height="48.003dp"
-    android:viewportWidth="48"
-    android:viewportHeight="48.003">
+    android:width="12.7dp"
+    android:height="12.701dp"
+    android:viewportWidth="12.7"
+    android:viewportHeight="12.701">
   <path
-      android:pathData="M0.49,0.493h47.02v47.02h-47.02z"
-      android:strokeWidth="0.979592"
-      android:fillColor="#ffffff"/>
+      android:pathData="M0.13,0.13l12.441,0l0,12.441l-12.441,0z"
+      android:strokeWidth="0.259"
+      android:fillColor="#ffffff"
+      android:fillType="evenOdd"/>
   <path
-      android:pathData="M0.49,0.493L47.51,0.493L47.51,47.513L0.49,47.513L0.49,0"
+      android:pathData="M0.13,0.13L12.57,0.13L12.57,12.571L0.13,12.571L0.13,-0"
       android:strokeLineJoin="miter"
       android:strokeWidth="0.979592"
       android:fillColor="#00000000"
+      android:fillType="evenOdd"
       android:strokeColor="#000000"
       android:strokeLineCap="butt"/>
   <path
-      android:pathData="m23.484,3.968c0.983,-0.11 1.704,0.26 2.165,1.11 0.074,3.775 0.074,7.551 0,11.326 -0.267,0.829 -0.841,1.273 -1.721,1.332 -0.822,-0.1 -1.358,-0.544 -1.61,-1.332 -0.074,-3.701 -0.074,-7.403 0,-11.104 0.215,-0.603 0.604,-1.047 1.166,-1.332z"
+      android:pathData="m6.213,1.05c0.26,-0.029 0.451,0.069 0.573,0.294 0.02,0.999 0.02,1.998 0,2.997 -0.071,0.219 -0.222,0.337 -0.455,0.353 -0.217,-0.026 -0.359,-0.144 -0.426,-0.353 -0.02,-0.979 -0.02,-1.959 0,-2.938 0.057,-0.16 0.16,-0.277 0.308,-0.353z"
       android:fillColor="#030303"
       android:fillType="evenOdd"/>
   <path
-      android:pathData="m9.826,8.521c0.561,-0.041 1.079,0.088 1.555,0.389 2.757,2.758 5.515,5.515 8.273,8.273 0.575,0.939 0.445,1.772 -0.389,2.498 -0.669,0.363 -1.336,0.363 -1.999,0C14.471,16.886 11.676,14.091 8.882,11.297 8.265,10.032 8.579,9.107 9.826,8.521Z"
+      android:pathData="m2.6,2.254c0.148,-0.011 0.285,0.023 0.411,0.103 0.73,0.73 1.459,1.459 2.189,2.189 0.152,0.248 0.118,0.469 -0.103,0.661 -0.177,0.096 -0.353,0.096 -0.529,0C3.829,4.468 3.089,3.728 2.35,2.989 2.187,2.654 2.27,2.409 2.6,2.254Z"
       android:fillColor="#040404"
       android:fillType="evenOdd"/>
   <path
-      android:pathData="m37.253,8.521c1.849,0.05 2.497,0.938 1.943,2.665 -2.832,2.832 -5.663,5.663 -8.495,8.495 -1.218,0.602 -2.088,0.287 -2.609,-0.944 -0.112,-0.512 -0.038,-0.993 0.222,-1.444 2.934,-2.99 5.914,-5.914 8.939,-8.772z"
+      android:pathData="m9.856,2.254c0.489,0.013 0.661,0.248 0.514,0.705 -0.749,0.749 -1.498,1.498 -2.248,2.248 -0.322,0.159 -0.552,0.076 -0.69,-0.25 -0.03,-0.135 -0.01,-0.263 0.059,-0.382 0.776,-0.791 1.565,-1.565 2.365,-2.321z"
       android:fillColor="#010101"
       android:fillType="evenOdd"/>
   <path
-      android:pathData="m5.162,22.29c3.739,-0.019 7.477,0 11.215,0.056 1.038,0.354 1.463,1.075 1.277,2.165 -0.262,0.632 -0.724,1.021 -1.388,1.166 -3.664,0.074 -7.329,0.074 -10.993,0 -1.2,-0.53 -1.551,-1.4 -1.055,-2.609 0.271,-0.328 0.586,-0.587 0.944,-0.777z"
+      android:pathData="m1.366,5.898c0.989,-0.005 1.978,0 2.967,0.015 0.275,0.094 0.387,0.285 0.338,0.573 -0.069,0.167 -0.192,0.27 -0.367,0.308 -0.97,0.02 -1.939,0.02 -2.909,0 -0.317,-0.14 -0.41,-0.37 -0.279,-0.69 0.072,-0.087 0.155,-0.155 0.25,-0.206z"
       android:fillColor="#030303"
       android:fillType="evenOdd"/>
   <path
-      android:pathData="m31.478,22.29c3.739,-0.019 7.477,0 11.215,0.056 1.002,0.318 1.427,1.003 1.277,2.054 -0.216,0.697 -0.678,1.123 -1.388,1.277 -3.664,0.074 -7.329,0.074 -10.993,0 -1.082,-0.442 -1.47,-1.238 -1.166,-2.387 0.267,-0.434 0.619,-0.767 1.055,-0.999z"
+      android:pathData="m8.329,5.898c0.989,-0.005 1.978,0 2.967,0.015 0.265,0.084 0.378,0.265 0.338,0.544 -0.057,0.184 -0.179,0.297 -0.367,0.338 -0.97,0.02 -1.939,0.02 -2.909,0 -0.286,-0.117 -0.389,-0.328 -0.308,-0.632 0.071,-0.115 0.164,-0.203 0.279,-0.264z"
       android:fillColor="#030303"
       android:fillType="evenOdd"/>
   <path
-      android:pathData="m17.932,27.953c1.151,0.001 1.855,0.556 2.11,1.666 -0.059,0.342 -0.151,0.675 -0.278,0.999 -2.832,2.832 -5.663,5.663 -8.495,8.495 -1.162,0.593 -2.032,0.315 -2.609,-0.833 -0.125,-0.556 -0.051,-1.075 0.222,-1.555 2.832,-2.832 5.663,-5.663 8.495,-8.495 0.202,-0.084 0.387,-0.177 0.555,-0.278z"
+      android:pathData="m4.744,7.396c0.305,0 0.491,0.147 0.558,0.441 -0.015,0.091 -0.04,0.179 -0.073,0.264 -0.749,0.749 -1.498,1.498 -2.248,2.248 -0.307,0.157 -0.538,0.083 -0.69,-0.22 -0.033,-0.147 -0.013,-0.284 0.059,-0.411 0.749,-0.749 1.498,-1.498 2.248,-2.248 0.053,-0.022 0.102,-0.047 0.147,-0.073z"
       android:fillColor="#010101"
       android:fillType="evenOdd"/>
   <path
-      android:pathData="m29.369,27.953c0.52,-0.018 1.001,0.112 1.444,0.389 2.757,2.757 5.515,5.515 8.273,8.273 0.542,0.836 0.486,1.631 -0.167,2.387 -0.717,0.464 -1.458,0.501 -2.221,0.111 -2.795,-2.795 -5.589,-5.589 -8.384,-8.384 -0.575,-1.291 -0.224,-2.216 1.055,-2.776z"
+      android:pathData="m7.77,7.396c0.138,-0.005 0.265,0.03 0.382,0.103 0.73,0.73 1.459,1.459 2.189,2.189 0.143,0.221 0.129,0.432 -0.044,0.632 -0.19,0.123 -0.386,0.133 -0.588,0.029 -0.739,-0.739 -1.479,-1.479 -2.218,-2.218 -0.152,-0.342 -0.059,-0.586 0.279,-0.734z"
       android:fillColor="#040404"
       android:fillType="evenOdd"/>
   <path
-      android:pathData="m23.484,30.285c0.98,-0.112 1.702,0.259 2.165,1.11 0.074,3.775 0.074,7.551 0,11.326 -0.265,0.838 -0.839,1.283 -1.721,1.332 -0.822,-0.1 -1.358,-0.544 -1.61,-1.332 -0.074,-3.701 -0.074,-7.403 0,-11.104 0.215,-0.603 0.604,-1.047 1.166,-1.332z"
+      android:pathData="m6.213,8.013c0.259,-0.03 0.45,0.068 0.573,0.294 0.02,0.999 0.02,1.998 0,2.997 -0.07,0.222 -0.222,0.339 -0.455,0.353 -0.217,-0.026 -0.359,-0.144 -0.426,-0.353 -0.02,-0.979 -0.02,-1.959 0,-2.938 0.057,-0.16 0.16,-0.277 0.308,-0.353z"
       android:fillColor="#030303"
       android:fillType="evenOdd"/>
 </vector>
